--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.android_support_version = "28.0.0"
     ext.kotlin_version = '1.2.71'
-    ext.kotlin_version = '1.2.30'
+    ext.anko_version = '0.10.1'
+
+    ext.rx_kotlin_version = '1.0.0'
+    ext.rx_android_version ='1.2.1'
+
+    ext.ok_http_version = '3.4.1'
+    ext.retrofit_version = '2.1.0'
+
+    ext.dagger_version = '2.11'
+
+    ext.rx_lifecycle_version = '1.0'
+
+    ext.glide_version = "3.7.0"
 
     repositories {
         google()
