--- a/Usercenter/src/main/debug/AndroidManifest.xml
+++ b/Usercenter/src/main/debug/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kotlin.user">
     <uses-permission android:name="android.permission.INTERNET"/>
-    <application>
+    <application
+        android:name="com.kotlin.base.common.BaseApplication">
         <activity android:name=".ui.RegisterActivity"
             android:allowBackup="true"
             android:label="@string/app_name"
