--- a/Usercenter/src/main/release/AndroidManifest.xml
+++ b/Usercenter/src/main/release/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.kotlin.user">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <application
         android:name="com.kotlin.base.common.BaseApplication">
         <activity android:name=".ui.RegisterActivity"></activity>
