--- a/Usercenter/src/main/release/AndroidManifest.xml
+++ b/Usercenter/src/main/release/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:name="com.kotlin.base.common.BaseApplication">
         <activity android:name=".ui.RegisterActivity"></activity>
