--- a/Baselibrary/build.gradle
+++ b/Baselibrary/build.gradle
@@ -6,13 +6,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 25
 
 
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -37,7 +37,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:${android_support_version}"
     implementation "com.android.support:design:${android_support_version}"
     implementation "com.android.support:cardview-v7:${android_support_version}"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:25.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -64,34 +64,34 @@ dependencies {
     api "com.trello:rxlifecycle-components:$rx_lifecycle_version"
     //Glide
     api "com.github.bumptech.glide:glide:$glide_version"
-   /* //Circle ImageView
+   //Circle ImageView
     api "de.hdodenhof:circleimageview:${circle_imageView_version}"
-    //Take Photo
-    api "com.jph.takephoto:takephoto_library:${take_photo_version}"
+      //Take Photo
+     api "com.jph.takephoto:takephoto_library:${take_photo_version}"
     //Alert View
-    api "com.bigkoo:alertview:${alert_view_version}"
-    //七牛
-    api 'com.qiniu:qiniu-android-sdk:7.3.+'
+     api "com.bigkoo:alertview:${alert_view_version}"
+     //七牛
+     api 'com.qiniu:qiniu-android-sdk:7.3.+'
     //底部导航
-    api 'com.ashokvarma.android:bottom-navigation-bar:2.0.2'
-    //Banner
+     api 'com.ashokvarma.android:bottom-navigation-bar:2.0.2'
+     //Banner
     api 'com.youth.banner:banner:1.4.10'  //最新版本
-    //标签
-    api 'com.github.shts:TriangleLabelView:1.1.2'
-    //画廊
-    api 'com.github.crosswall:Android-Coverflow:release-v1.0.4'
-    //MulitStateView
-    api "com.github.Kennyc1012:MultiStateView:$multi_state_view_version"
-    //上下拉刷新
-    api 'cn.bingoogolapple:bga-refreshlayout:1.1.7@aar'
-    //Kotlin Bus
-    api 'com.eightbitlab:rxbus:1.0.2'
-    //FlowLayout
-    api 'com.zhy:flowlayout-lib:1.0.3'
-    //ARouter
-    api "com.alibaba:arouter-api:$arouter_api_version"
-    //BadgeView
-    api 'q.rorbin:badgeview:1.1.2'*/
+    /* //标签
+     api 'com.github.shts:TriangleLabelView:1.1.2'
+      //画廊
+     api 'com.github.crosswall:Android-Coverflow:release-v1.0.4'
+     //MulitStateView
+     api "com.github.Kennyc1012:MultiStateView:$multi_state_view_version"
+     //上下拉刷新
+     api 'cn.bingoogolapple:bga-refreshlayout:1.1.7@aar'
+     //Kotlin Bus
+     api 'com.eightbitlab:rxbus:1.0.2'
+     //FlowLayout
+     api 'com.zhy:flowlayout-lib:1.0.3'
+     //ARouter
+     api "com.alibaba:arouter-api:$arouter_api_version"
+     //BadgeView
+     api 'q.rorbin:badgeview:1.1.2'*/
 }
 repositories {
     mavenCentral()
