--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.android_support_version = "25.0.0"
+    ext.android_support_version = "26.0.0"
     ext.kotlin_version = '1.2.71'
     ext.anko_version = '0.10.1'
 
@@ -44,6 +44,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
